// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  HI 😀 😎 There 
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Map empty 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    height="500"
    width="950"
  >
    <text
      transform="translate(50,50)"
    >
      Loading
    </text>
  </svg>
</div>
`;

exports[`Storyshots Map populated 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    height="500"
    width="950"
  >
    <g
      className="Map"
    />
  </svg>
</div>
`;

exports[`Storyshots Tooltip empty 1`] = `
<div
  className="Tooltip"
  id="tooltip"
  style={
    Object {
      "display": "none",
    }
  }
/>
`;

exports[`Storyshots ZoomableGroup with no children 1`] = `
<svg
  className="ZoomableGroup"
  height={undefined}
  width={undefined}
>
  <g
    transform="scale(1)"
  />
</svg>
`;

exports[`Storyshots ZoomableGroup with one Map 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    className="ZoomableGroup"
    height="500"
    width="1000"
  >
    <g
      transform="scale(1)"
    >
      <g
        className="Map"
      />
    </g>
  </svg>
</div>
`;
